--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Michael M.Ringa-Portfolio</title>
+    <title>Manfred o. kasembeli-Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -48,14 +48,14 @@
     <section id="home" class="home">
       <div class="Home-img">
         <div class="profile">
-          <img src="img/profile.jpg" alt="profile-Picture" />
+          <img src="img/man2.png.jpg" alt="profile-Picture" />
         </div>
         <div class="home-content">
           <h1>
-            Hello, <br />
-            <span>I'm Michael</span>
+            Whoami <br />
+            <span> Manfred okumu</span>
           </h1>
-          <p>Freelancer Web Designer & Developer</p>
+          <p>Web Designer, Developer & Networking/pen tester</p>
           <a href="contact.html"><button>Hire Me</button></a>
         </div>
       </div>
@@ -67,28 +67,26 @@
 
     <section id="skills" class="skills">
       <div class="skill-card">
-        <img src="img/github.png" alt="" />
+        <img src="img/man.png.jpg" alt="" />
         <h2>Git version control</h2>
         <!-- Description will go here -->
-        <p>Skilled in Git for efficient code management and collaboration.</p>
+        <p>In my journey with Git, I've mastered essential skills to navigate code development seamlessly. Git empowers me to track changes meticulously, revert when needed, and collaborate effortlessly through branching and merging. I excel in resolving conflicts, orchestrating systematic code reviews, and visualizing project history for insightful analysis. With Git's robust capabilities, I gracefully manage remote repositories, mark milestones with tags, and customize workflows for optimal efficiency. Whether undoing changes, managing releases, or optimizing performance, Git is my trusted ally in every development endeavor, ensuring smooth collaboration and code evolution.</p>
       </div>
       <!-- End of Skill Card -->
       <div class="skill-card">
         <img src="img/coding.png" alt="" />
         <h2>Web-Development</h2>
         <!-- Description will go here -->
-        <p>
-          Proficient in HTML, CSS, and JavaScript for creating visually
-          appealing, responsive websites.
-        </p>
+        <p> 
+          With a passion for web development, I've honed a diverse skill set to craft captivating digital experiences. Proficient in HTML, CSS, and JavaScript, I bring designs to life with responsive layouts and dynamic functionalities. My expertise extends to popular frameworks like React and Vue.js, empowering me to build interactive and user-friendly interfaces. I excel in backend development with Node.js and databases like MongoDB, ensuring robust server-side logic and data management. Versatile in version control with Git, I streamline collaboration and code management for seamless project delivery. Committed to staying updated with emerging technologies, I thrive on pushing boundaries and creating innovative web solutions.
+         </p>
       </div>
       <div class="skill-card">
         <img src="img/dslr-camera.png" alt="" />
-        <h2>Photography</h2>
+        <h2>penetration testing</h2>
         <!-- Description will go here -->
         <p>
-          Passionate photographer with expertise in various styles and
-          post-processing.
+          With a keen eye for cybersecurity, I specialize in penetration testing to safeguard digital assets against vulnerabilities. Proficient in various tools and techniques, including Burp Suite, Metasploit, and Nmap, I uncover weaknesses in web applications and networks. Through comprehensive assessments, I identify potential entry points for malicious actors and provide actionable recommendations for remediation. My expertise spans both manual and automated testing methodologies, ensuring thorough evaluation of security posture. With a commitment to continuous learning and staying abreast of emerging threats, I deliver robust penetration testing solutions to fortify defenses and mitigate risks effectively. Trust me to secure your digital infrastructure with precision and expertise.
         </p>
       </div>
       <div class="skill-card">
@@ -124,11 +122,11 @@
 
     <div class="col-3">
         <h3>CONTACT</h3>
-        <p>123, xyz Road BSK 3<br>Malindi, Kenya</p>
+        <p>254-704581243, 254-750450254 biashara street<br>kilifi, Kenya</p>
         
     <div class="social-icons">
         <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://twitter.com/mwabonje_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://twitter.com/ManfredOku" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href=""><i class="fa-brands fa-tiktok"></i></a>
         <!-- <a href=""><i class="fa-brands fa-pexels"></i></a> -->
@@ -136,7 +134,7 @@
     </div>
 </div>
 <footer class="Copyright">
-  <p>Copyright &copy; 2023 | Michael M. Ringa | All Rights Reserved</p>
+  <p>Copyright &copy; 2024 | Manfred kasembeli | All Rights Reserved</p>
 </footer>
 <!-- JAVASCRIPT -->
  <script src="script.js"></script>
