--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Michael M.Ringa-Portfolio</title>
+    <title>Manfred kasembeli-Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -24,7 +24,7 @@
     <nav class="nav-bar">
       <div class="nav-head">
         <div class="logo">
-          <h1>M<span>R</span></h1>
+          <h1>M<span>k</span></h1>
         </div>
          <button class="hamburger-btn" onclick="toggleNav()">
             <span class="bar"></span>
@@ -48,14 +48,14 @@
     <section id="home" class="home">
       <div class="Home-img">
         <div class="profile">
-          <img src="img/profile.jpg" alt="profile-Picture" />
+          <img src="img/man.png1.jpg" alt="profile-Picture" />
         </div>
         <div class="home-content">
           <h1>
-            Hello, <br />
-            <span>I'm Michael</span>
+            Whoami <br />
+            <span> Manfred okumu</span>
           </h1>
-          <p>Freelancer Web Designer & Developer</p>
+          <p>Web Designer, Developer & Networking/pen tester </p>
           <a href=""><button>Hire Me</button></a>
         </div>
       </div>
@@ -106,11 +106,12 @@
 
     <div class="col-3">
         <h3>CONTACT</h3>
-        <p>123, xyz Road BSK 3<br>Malindi, Kenya</p>
+        <p>254-704581243, 254-750450254 biashara street<br>kilifi, Kenya</p>
         
     <div class="social-icons">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-wST2TxZ4oBd7lG4VhrlTnRm9Cvz9M5wVu4O7I/2XQoGxzlNNvPSTgY8jVr87yImtVQDDmgaKe0qG5rkDyjG+Uw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://twitter.com/mwabonje_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://twitter.com/ManfredOku" target="_blank"><i class="fab-brands fab-twitter"></i></a>
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href=""><i class="fa-brands fa-tiktok"></i></a>
         <!-- <a href=""><i class="fa-brands fa-pexels"></i></a> -->
@@ -118,7 +119,7 @@
     </div>
 </div>
 <footer class="Copyright">
-  <p>Copyright &copy; 2023 Michael M. Ringa | All Rights Reserved</p>
+  <p>Copyright &copy; 2024 Manfred o. kasembeli | All Rights Reserved</p>
 </footer>
 
 <!-- JAVASCRIPT -->
